@@ -4,6 +4,7 @@ File_ClustQ_Mean	/afs/cern.ch/user/d/dorney/scratch0/CMS_GEM/CMS_GEM_Analysis_Fr
 File_ClustQ_MPV	/afs/cern.ch/user/d/dorney/scratch0/CMS_GEM/CMS_GEM_Analysis_Framework/data/TestBeam2013_FNAL_ClustCharge/ClustChargeData_MPV.txt
 File_ClustQ_Sigma	/afs/cern.ch/user/d/dorney/scratch0/CMS_GEM/CMS_GEM_Analysis_Framework/data/TestBeam2013_FNAL_ClustCharge/ClustChargeData_Sigma.txt
 File_CluseSize	/afs/cern.ch/user/d/dorney/scratch0/CMS_GEM/CMS_GEM_Analysis_Framework/figures/GE11-IV-CERN-0001/GE11-IV-CERN-0001_GIF_TestBeam_AvgClustSize_vs_Gain.root
+File_Output EfficiencyPrediction.root
 #=====Device Under Test Parameters=====
 DUT_GAIN_P0	3.49545e-02
 DUT_GAIN_P0_Err	1.98035e-04
